# xserver-kitty

./: .gitignore  Containerfile  README.md  build-xkitty-debian.sh  build-xsixel-debian.sh  build-xsixel-macos.sh  build-xsixel.sh  configure.ac
dix/: Makefile.am  main.c
hw/kdrive/: Makefile.am
hw/kdrive/sixel/: Makefile.am  Xsixel  kitty.c  kittyinit.c  sixel.c  sixelinit.c
hw/kdrive/src/: Makefile.am  kdrive.c  kdrive.h  kexeccmd.c  kinput.c
hw/xfree86/common/: xf86Config.c
hw/xfree86/drivers/modesetting/: drmmode_display.c
hw/xfree86/modes/: xf86Crtc.c
include/: sixel-config.h.in
os/: osinit.c  utils.c
randr/: rrcrtc.c
